<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Friend Tracking</string>
    <string name="action_settings">Settings</string>
    <string name="logo">FT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="loginLogo">Friend Tracking</string>
    <string name="signUp">Sign Up!</string>
    <string name="chooseUsername">Username</string>
    <string name="chooseFirstname">First name</string>
    <string name="chooseSecondname">Last name</string>
    <string name="age">What is your age?</string>
    <string name="enterData">Insert personal information:</string>
    <string name="chooseTown">Home town</string>
    <string name="mail">Email address?</string>
    <string name="choosePassword">Password</string>
    <string name="confirm">Confirm</string>
    <string name="sex">Sex:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="loginURL">http://friendtracking.com/api/login.php</string>
    <string name="registerURL">http://friendtracking.com/api/register.php</string>
    <string name="logout">Logout</string>
    <string name="title_activity_friend_tags">FriendTagsActivity</string>

</resources>